Fix horizontal overflow due to tooltips

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,8 @@ button {
 body {
     background: var(--color-background);
     color: #ffffff;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 .scaleOnHover {
